[package]
name = "RuDDy"
version = "0.2.0"
edition = "2021"
authors = ["Jian Luo <crackedpoly@outlook.com>"]
keywords = ["BDD", "Rust", "Verification"]

[features]
default = []
profile = ["cache_stat", "table_stat", "op_stat"]
cache_stat = ["dep:cpu-time"]
table_stat = ["dep:cpu-time"]
op_stat = ["dep:cpu-time"]


[lib]
name = "ruddy"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[badges]
maintenance = { status = "actively-developed" }

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
lto = true

[dependencies]
cpu-time = { version = "1.0.0", optional = true }
